# CalcPhys

./: .gitignore  README.md  programa
ejemplos/: ej1.cafi  ej2.cafi  ej3.cafi  ej4.cafi  ej5.cafi
src/: CMakeLists.txt  CalcFis.g4  Driver.h  Main.cpp
src/.antlr/: CalcFis.interp  CalcFis.tokens  CalcFisBaseListener.java  CalcFisLexer.interp  CalcFisLexer.java  CalcFisLexer.tokens  CalcFisListener.java  CalcFisParser.java
